--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -18,21 +18,13 @@ parking_model:
   token_nums: 204
   image_crop: 256
 
+  ################################
   # bev encoder
   feature_encoder: 'conet'
 
   point_cloud_range: [-51.2, -51.2, -5.0, 51.2, 51.2, 3.0]
   occ_size: [512, 512, 40]
   lss_downsample: [4, 4, 4]  # [128 128 10]
-  voxel_x: (point_cloud_range[3] - point_cloud_range[0]) / occ_size[0]  # 0.4
-  voxel_y: (point_cloud_range[4] - point_cloud_range[1]) / occ_size[1]
-  voxel_z: (point_cloud_range[5] - point_cloud_range[2]) / occ_size[2]
-
-  grid_config:
-    xbound: [point_cloud_range[0], point_cloud_range[3], voxel_x*lss_downsample[0]],
-    ybound: [point_cloud_range[1], point_cloud_range[4], voxel_y*lss_downsample[1]],
-    zbound: [point_cloud_range[2], point_cloud_range[5], voxel_z*lss_downsample[2]],
-    dbound: [2.0, 58.0, 0.5]
   
   OccNet_cfg:
     loss_norm: True
@@ -50,13 +42,13 @@ parking_model:
       type: 'SECONDFPN'
       in_channels: [256, 512, 1024, 2048]
       upsample_strides: [0.25, 0.5, 1, 2]
-      out_channels: [128, 128, 128, 128])
+      out_channels: [128, 128, 128, 128]
 
     img_view_transformer:
       type: 'ViewTransformerLiftSplatShootVoxel'
-      loss_depth_weight: 3.
+      loss_depth_weight: 3
       loss_depth_type: 'kld'
-      grid_config: grid_config
+      grid_config: null
       data_config: 
         cams: ['CAM_FRONT_LEFT', 'CAM_FRONT', 'CAM_FRONT_RIGHT',
                 'CAM_BACK_LEFT', 'CAM_BACK', 'CAM_BACK_RIGHT']
@@ -87,7 +79,7 @@ parking_model:
 
   bev_encoder_in_channel: 64
   bev_encoder_out_channel: 258  # 256 + 2
-
+  ################################
   # bev model
   bev_x_bound: [-10.0, 10.0, 0.1]
   bev_y_bound: [-10.0, 10.0, 0.1]
