--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -66,19 +66,23 @@ parking_model:
       vp_megvii: False
 
     occ_encoder_backbone_cfg: 
-      type: 'CustomResNet3D'
+      # type: 'CustomResNet3D'
       depth: 18
       n_input_channels: 80
       block_inplanes: [80, 160, 320, 640]
       out_indices: (0, 1, 2, 3)
+      norm_cfg: null
 
     occ_encoder_neck_cfg:
-      type: 'FPN3D'
+      # type: 'FPN3D'
       with_cp: True
       in_channels: [80, 160, 320, 640]
       out_channels: 256
+      norm_cfg: null
+
     pts_bbox_head:
-      type: 'OccHead'
+      # type: 'OccHead'
+      norm_cfg: null
       soft_weights: True
       cascade_ratio: 4
       sample_from_voxel: True
