--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -55,6 +55,8 @@ parking_model:
         cams: ['CAM_FRONT_LEFT', 'CAM_FRONT', 'CAM_FRONT_RIGHT',
                 'CAM_BACK_LEFT', 'CAM_BACK', 'CAM_BACK_RIGHT']
         Ncams: 6
+        # input_size: (896, 1600)
+        # src_size: (900, 1600)
         input_size: (896, 1600)
         src_size: (900, 1600)
         # image-view augmentation
