--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -57,8 +57,8 @@ parking_model:
         Ncams: 6
         # input_size: (896, 1600)
         # src_size: (900, 1600)
-        input_size: (896, 1600)
-        src_size: (900, 1600)
+        input_size: (256, 256)
+        src_size: (260, 256)
         # image-view augmentation
         resize: (-0.06, 0.11)
         rot: (-5.4, 5.4)
@@ -98,7 +98,7 @@ parking_model:
       out_channel: 17
       point_cloud_range: [-51.2, -51.2, -5.0, 51.2, 51.2, 3.0]
       loss_weight_cfg: null
-      baseline_mode: "Zonotope"
+      baseline_mode: "NearRefine"
 
     empty_idx: 0
 
