--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -20,7 +20,7 @@ parking_model:
 
   ################################
   # bev encoder
-  feature_encoder: 'conet'
+  feature_encoder: 'bev'
   voxel_out_indices: (0, 1, 2, 3)
 
   point_cloud_range: [-51.2, -51.2, -5.0, 51.2, 51.2, 3.0]
