--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -103,13 +103,17 @@ parking_model:
     empty_idx: 0
 
   conet_encoder_in_channel: 192
-  conet_encoder_out_channel: 516  # 256 + 2
+  conet_encoder_out_channel: 516  # 512 + 4
   Segdim: [8, 8, 2]
+  conet_x_bound: [-16.0, 16.0, 0.2]
+  conet_y_bound: [-16.0, 16.0, 0.2]
+  conet_z_bound: [-2.0, 2.0, 0.2]
 
-  bev_encoder_in_channel: 64
-  bev_encoder_out_channel: 258  # 256 + 2
   ################################
   # bev model
+  bev_encoder_in_channel: 64
+  bev_encoder_out_channel: 258  # 256 + 2
+
   bev_x_bound: [-10.0, 10.0, 0.1]
   bev_y_bound: [-10.0, 10.0, 0.1]
   bev_z_bound: [-10.0, 10.0, 20.0]
@@ -120,7 +124,7 @@ parking_model:
   backbone: "efficientnet-b4"
 
   # segmentation
-  seg_classes: 3
+  seg_classes: 17
   seg_vehicle_weights: [1.0, 2.0, 2.0]
 
   # transformer encoder
@@ -135,6 +139,8 @@ parking_model:
 
   # transformer decoder
   tf_de_dim: 258
+  tf_de_conet_dim: 516
+
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
