--- a/sensor_setup.yaml
+++ b/sensor_setup.yaml
@@ -122,7 +122,7 @@ lidar_specs: {
   'lidar_01': {
     'x': -20.0, 'y': -20.0, 'z': 10,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
-    'channels': 160, 'range': 50, 'points_per_second': 1000,
+    'channels': 160, 'range': 50, 'points_per_second': 1000000,
     'rotation_frequency': 100, 'type': 'sensor.lidar.ray_cast',
 
     'horizontal_fov': 360,
@@ -132,7 +132,7 @@ lidar_specs: {
   'lidar_02': {
     'x': -20.0, 'y': 20.0, 'z': 10,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
-    'channels': 160, 'range': 50, 'points_per_second': 1000,
+    'channels': 160, 'range': 50, 'points_per_second': 1000000,
     'rotation_frequency': 100, 'type': 'sensor.lidar.ray_cast',
 
     'horizontal_fov': 360,
@@ -142,7 +142,7 @@ lidar_specs: {
   'lidar_03': {
     'x': 20.0, 'y': -20.0, 'z': 10,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
-    'channels': 160, 'range': 50, 'points_per_second': 1000,
+    'channels': 160, 'range': 50, 'points_per_second': 1000000,
     'rotation_frequency': 100, 'type': 'sensor.lidar.ray_cast',
 
     'horizontal_fov': 360,
@@ -152,7 +152,7 @@ lidar_specs: {
   'lidar_04': {
     'x': 20.0, 'y': 20.0, 'z': 10,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
-    'channels': 160, 'range': 50, 'points_per_second': 1000,
+    'channels': 160, 'range': 50, 'points_per_second': 1000000,
     'rotation_frequency': 100, 'type': 'sensor.lidar.ray_cast',
 
     'horizontal_fov': 360,
