--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -26,7 +26,9 @@ parking_model:
   point_cloud_range: [-16.0, -16.0, -2.0, 16.0, 16.0, 2.0]
   occ_size: [160, 160, 20]
   lss_downsample: [4, 4, 4]  # [128 128 10]
-  
+  only_3d_perception: True # when this flag set to true, only care about 3d occ, 
+                            # no control loss, no target slot, no ego motion fusion 
+    
   OccNet_cfg:
     loss_norm: True
     img_backbone:
@@ -54,6 +56,7 @@ parking_model:
       data_config: 
         cams: ['CAM_FRONT_LEFT', 'CAM_FRONT', 'CAM_FRONT_RIGHT',
                 'CAM_BACK_LEFT', 'CAM_BACK', 'CAM_BACK_RIGHT']
+                # ⬆️never used in model
         Ncams: 6
         # input_size: (896, 1600)
         # src_size: (900, 1600)
