--- a/config/training_conet.yaml
+++ b/config/training_conet.yaml
@@ -11,12 +11,13 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 2
 
-  training_map: "Town04_Opt"
-  validation_map: "Town04_Opt_Val"
-  future_frame_nums: 4
+  training_map: "data_single_scene/Town04_Opt"
+  validation_map: "data_single_scene/Town04_Opt_Val"
+  future_frame_nums: 5
   hist_frame_nums: 10
   token_nums: 204
   image_crop: 256
+  direct_nums: 4
 
   ################################
   # bev encoder
@@ -153,4 +154,4 @@ parking_model:
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
-  tf_de_tgt_dim: 15
+  tf_de_tgt_dim: 5
