--- a/config/training.yaml
+++ b/config/training.yaml
@@ -84,8 +84,8 @@ parking_model:
       loss_depth_type: 'kld'
       grid_config: null
       data_config: 
-        cams: ['CAM_FRONT', 'CAM_LEFT', 'CAM_RIGHT', 'CAM_REAR']
-        Ncams: 4
+        cams: ['CAM_FRONT', 'CAM_FRONT_LEFT', 'CAM_FRONT_RIGHT', 'CAM_BACK', 'CAM_BACK_LEFT', 'CAM_BACK_RIGHT']
+        Ncams: 6
         # input_size: (896, 1600)
         # src_size: (900, 1600)
         input_size: (256, 256)
