ADD: add gt occ for parking_agent.py to retrieve gt voxel when inference, using 5 lidar to form a dense occ

--- a/config/training.yaml
+++ b/config/training.yaml
@@ -1,4 +1,6 @@
 parking_model:
+  #settings
+  use_gt_occ: true # if true, use gt occ in parking_agent
   # train
   data_dir: './e2e_parking/'
   log_dir: './log/'
