--- a/config/training.yaml
+++ b/config/training.yaml
@@ -13,8 +13,8 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 20
 
-  training_map: "Town04_Opt"
-  validation_map: "Town04_Opt_Val"
+  training_map: "Town04_Opt_mul"
+  validation_map: "Town04_Opt_mul"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -39,8 +39,8 @@ parking_model:
   backbone: "efficientnet-b4"
 
   # segmentation
-  seg_classes: 3
-  seg_vehicle_weights: [1.0, 40.0, 40.0]
+  seg_classes: 18 # 3
+  seg_vehicle_weights: [1.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0, 40.0] # [1.0, 40.0, 40.0]
 
   # transformer encoder
   tf_en_dim: 258
