--- a/config/training.yaml
+++ b/config/training.yaml
@@ -1,6 +1,6 @@
 parking_model:
   # train
-  data_dir: './e2e_parking/'
+  data_dir: '/'
   log_dir: './log/'
   checkpoint_dir: './ckpt'
   log_every_n_steps: 10
@@ -9,10 +9,10 @@ parking_model:
   epochs: 155
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 2
+  batch_size: 20
 
-  training_map: "Town04_Opt"
-  validation_map: "Town04_Opt_Val"
+  training_map: "/vast/rs9193/Town_Opt_1000"
+  validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
