UPDATE: now fusion target point and ego_motion in 3rd dimension, sequence length.

--- a/config/training.yaml
+++ b/config/training.yaml
@@ -20,7 +20,7 @@ parking_model:
 
   # bev encoder
   bev_encoder_in_channel: 64
-  bev_encoder_out_channel: 258  # 256 + 2
+  bev_encoder_out_channel: 264  # 256 + 4 + 4
 
   # bev model
   bev_x_bound: [-10.0, 10.0, 0.1]
@@ -37,7 +37,7 @@ parking_model:
   seg_vehicle_weights: [1.0, 2.0, 2.0]
 
   # transformer encoder
-  tf_en_dim: 258
+  tf_en_dim: 264
   tf_en_heads: 6
   tf_en_layers: 4
   tf_en_dropout: 0.05
@@ -45,7 +45,7 @@ parking_model:
   tf_en_motion_length: 3
 
   # transformer decoder
-  tf_de_dim: 258
+  tf_de_dim: 264
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
