--- a/config/sensor_setup.yaml
+++ b/config/sensor_setup.yaml
@@ -1,35 +1,35 @@
 cam_specs: {
-  'depth_front': {
+  'depth_front_us': {
     'x': 2.36, 'y': 0.0, 'z': 1.5,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
     'type': 'sensor.camera.depth',
   },
-  'depth_front_left': {
+  'depth_front_left_us': {
     'x': 2.36, 'y': -0.792, 'z': 1.5,
     'roll': 0.0, 'pitch': 0.0, 'yaw': -55.0,
     'type': 'sensor.camera.depth',
   },
-  'depth_front_right': {
+  'depth_front_right_us': {
     'x': 2.36, 'y': 0.792, 'z': 1.5,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 55.0,
     'type': 'sensor.camera.depth',
   },
-  'depth_back': {
+  'depth_back_us': {
     'x': -2.36, 'y': 0.0, 'z': 1.55,
     'roll': 0.0, 'pitch': 0.0, 'yaw': -180.0,
     'type': 'sensor.camera.depth',
   },
-  'depth_back_left': {
+  'depth_back_left_us': {
     'x': -2.36, 'y': -0.792, 'z': 1.55,
     'roll': 0, 'pitch': 0.0, 'yaw': -110,
     'type': 'sensor.camera.depth',
   },
-  'depth_back_right': {
+  'depth_back_right_us': {
     'x': -2.36, 'y': 0.792, 'z': 1.55,
     'roll': 0, 'pitch': 0.0, 'yaw': 110,
     'type': 'sensor.camera.depth',
   },
-  'camera_front': {
+  'camera_front_us': {
     'x': 2.36, 'y': 0.0, 'z': 1.5,
     'fov': 100,
     'roll': 0, 'pitch': 0, 'yaw': 0,
@@ -37,7 +37,7 @@ cam_specs: {
     'width': 400,
     'height': 300,
   },
-  'camera_front_left': {
+  'camera_front_left_us': {
     'x': 2.36, 'y': -0.792, 'z': 1.5,
     'fov': 100,
     'roll': 0.0, 'pitch': 0.0, 'yaw': -55.0,
@@ -45,7 +45,7 @@ cam_specs: {
     'width': 400,
     'height': 300,
   },
-  'camera_front_right': {
+  'camera_front_right_us': {
     'x': 2.36, 'y': 0.792, 'z': 1.5,
     'fov': 100,
     'roll': 0.0, 'pitch': 0.0, 'yaw': 55.0,
@@ -53,7 +53,7 @@ cam_specs: {
     'width': 400,
     'height': 300,
   },
-  'camera_back': {
+  'camera_back_us': {
     'x': -2.36, 'y': 0.0, 'z': 1.55,
     'fov': 100,
     'roll': 0.0, 'pitch': 0.0, 'yaw': -180.0,
@@ -61,7 +61,7 @@ cam_specs: {
     'width': 400,
     'height': 300,
   },
-  'camera_back_left': {
+  'camera_back_left_us': {
     'x': -2.36, 'y': -0.792, 'z': 1.55,
     'fov': 100,
     'roll': 0, 'pitch': 0.0, 'yaw': -110,
@@ -69,7 +69,7 @@ cam_specs: {
     'width': 400,
     'height': 300,
   },
-  'camera_back_right': {
+  'camera_back_right_us': {
     'x': -2.36, 'y': 0.792, 'z': 1.55,
     'fov': 100,
     'roll': 0, 'pitch': 0.0, 'yaw': 110,
@@ -84,6 +84,46 @@ cam_specs: {
     'type': 'sensor.camera.rgb',
     'width': 1600,
     'height': 900,
+  },
+  'camera_front_e2e': {
+    'x': 1.5, 'y': 0.0, 'z': 1.5,
+    'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
+    'type': 'sensor.camera.rgb',
+  },
+  'camera_left_e2e': {
+    'x': 0.0, 'y': -0.8, 'z': 1.5,
+    'roll': 0.0, 'pitch': -40.0, 'yaw': -90.0,
+    'type': 'sensor.camera.rgb',
+  },
+  'camera_right_e2e': {
+    'x': 0.0, 'y': 0.8, 'z': 1.5,
+    'roll': 0.0, 'pitch': -40.0, 'yaw': 90.0,
+    'type': 'sensor.camera.rgb',
+  },
+  'camera_rear_e2e': {
+    'x': -2.2, 'y': 0.0, 'z': 1.5,
+    'roll': 0.0, 'pitch': -30.0, 'yaw': 180.0,
+    'type': 'sensor.camera.rgb',
+  },
+  'depth_front_e2e': {
+    'x': 1.5, 'y': 0.0, 'z': 1.5,
+    'roll': 0.0, 'pitch': 0.0, 'yaw': 0.0,
+    'type': 'sensor.camera.depth',
+  },
+  'depth_left_e2e': {
+    'x': 0.0, 'y': -0.8, 'z': 1.5,
+    'roll': 0.0, 'pitch': -40.0, 'yaw': -90.0,
+    'type': 'sensor.camera.depth',
+  },
+  'depth_right_e2e': {
+    'x': 0.0, 'y': 0.8, 'z': 1.5,
+    'roll': 0.0, 'pitch': -40.0, 'yaw': 90.0,
+    'type': 'sensor.camera.depth',
+  },
+  'depth_rear_e2e': {
+    'x': -2.2, 'y': 0.0, 'z': 1.5,
+    'roll': 0.0, 'pitch': -30.0, 'yaw': 180.0,
+    'type': 'sensor.camera.depth',
   },
 }
 lidar_specs: {
