--- a/config/training.yaml
+++ b/config/training.yaml
@@ -9,9 +9,10 @@ parking_model:
   epochs: 155
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 32
+  batch_size: 20
 
   training_map: "/vast/rs9193/Town_Opt_1000"
+  # validation_map: "/vast/rs9193/Town_Opt_1000_extra_small"
   validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
