--- a/config/training.yaml
+++ b/config/training.yaml
@@ -24,8 +24,8 @@ parking_model:
   bev_encoder_out_channel: 264  # 256 + 4 + 4
 
   # bev model
-  bev_x_bound: [-10.0, 10.0, 0.1]
-  bev_y_bound: [-10.0, 10.0, 0.1]
+  bev_x_bound: [-10.0, 10.0, 0.4]
+  bev_y_bound: [-10.0, 10.0, 0.4]
   bev_z_bound: [-10.0, 10.0, 20.0]
   d_bound: [0.5, 12.5, 0.25]
   final_dim: [256, 256]
@@ -51,3 +51,11 @@ parking_model:
   tf_de_layers: 4
   tf_de_dropout: 0.05
   tf_de_tgt_dim: 15
+
+  # waypoint tokenize
+  x_min: -3
+  x_max: 3
+  y_min: -6
+  y_max: 6
+  yaw_min: -40
+  yaw_max: 40
