--- a/config/training.yaml
+++ b/config/training.yaml
@@ -1,18 +1,18 @@
 parking_model:
   # train
   data_dir: '/'
-  log_dir: './log/'
-  checkpoint_dir: './ckpt'
+  log_dir: './log/3imgs_avgpool/' #TODO: Change log name
+  checkpoint_dir: './ckpt/3imgs_avgpool/'
   log_every_n_steps: 10
   check_val_every_n_epoch: 3
 
   epochs: 155
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 24 #10 --> 30GB VRAM, 24 --> 68GB, VRAM 28 --> 79GB
+  batch_size: 28 # TODO: Change to 28 for regular case #10 --> 30GB VRAM, 24 --> 68GB, VRAM 28 --> 79GB
 
-  training_map: "/vast/rs9193/Town_Opt_1000" #"/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
-  validation_map: "/scratch/rs9193/Town_Opt_1000_Val" #"/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
+  training_map: "/vast/rs9193/Town_Opt_1000" #"/vast/rs9193/Town_Opt_1000" #"/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
+  validation_map: "/scratch/rs9193/Town_Opt_1000_Val" #"/scratch/rs9193/Town_Opt_1000_Val" #"/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -49,7 +49,7 @@ parking_model:
 
   # Sequence lengths
   tf_en_bev_length: 256  # Sequence length of bev_feature
-  tf_en_img_length: 384  # Sequence length of img_feature (e.g., 16x16 for DINOv2)
+  tf_en_img_length: 48 #384  # Sequence length of img_feature (e.g., 16x16 for DINOv2)
   tf_en_motion_length: 3  # Sequence length of motion_feature
   tf_en_target_length: 3  # Sequence length of target_feature
 
@@ -59,4 +59,4 @@ parking_model:
   tf_de_layers: 4
   tf_de_dropout: 0.05
   tf_de_control_length: 15
-  tf_de_img_length: 384 #8*48 = 384 for resnet // img_feature token length assuming DINOv2's feature map is (16*16,768) 
+  tf_de_img_length: 48 #384 #8*48 = 384 for resnet // img_feature token length assuming DINOv2's feature map is (16*16,768) 
