--- a/config/training.yaml
+++ b/config/training.yaml
@@ -11,8 +11,11 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 32
 
-  training_map: "/vast/rs9193/Town_Opt_1000"
-  validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/home/ryan/small_dataset/"
+  validation_map: "/home/ryan/small_dataset/"
+
+  # training_map: "/vast/rs9193/Town_Opt_1000"
+  # validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -49,4 +52,4 @@ parking_model:
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
-  tf_de_tgt_dim: 15
+  tf_de_tgt_dim: 7 # Used to be 1+4*3+2 = 15, now it is 1+4+2 = 7
