--- a/config/training.yaml
+++ b/config/training.yaml
@@ -11,8 +11,8 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 20
 
-  training_map: "/vast/rs9193/Town_Opt_1000"
-  validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/scratch/rs9193/Town_Opt_1" #/scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "/scratch/rs9193/Town_Opt_1" #/scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -50,3 +50,6 @@ parking_model:
   tf_de_layers: 4
   tf_de_dropout: 0.05
   tf_de_tgt_dim: 15
+  
+  # dynamics model ckpt
+  hybrid_ckpt_path: "/scratch/rs9193/e2e_temporal_spatial/ParkWithUncertainty/ckpt/last.ckpt"
