--- a/config/training.yaml
+++ b/config/training.yaml
@@ -13,7 +13,9 @@ parking_model:
 
   training_map: "/vast/rs9193/Town_Opt_1000"
   validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
-  future_frame_nums: 4
+  # training_map: "/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
+  # validation_map: "/scratch/rs9193/ParkWithUncertainty/e2e_parking/Town_Opt_1"
+  future_frame_nums: 10 #4
   hist_frame_nums: 10
   token_nums: 204
   image_crop: 256
@@ -23,8 +25,8 @@ parking_model:
   bev_encoder_out_channel: 264  # 256 + 4 + 4
 
   # bev model
-  bev_x_bound: [-10.0, 10.0, 0.1]
-  bev_y_bound: [-10.0, 10.0, 0.1]
+  bev_x_bound: [-10.0, 10.0, 0.1] #[-5.0, 5.0, 0.1]
+  bev_y_bound: [-10.0, 10.0, 0.1] #[-5.0, 5.0, 0.1]
   bev_z_bound: [-10.0, 10.0, 20.0]
   d_bound: [0.5, 12.5, 0.25]
   final_dim: [256, 256]
@@ -49,4 +51,4 @@ parking_model:
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
-  tf_de_tgt_dim: 15
+  tf_de_tgt_dim: 33 #15
