--- a/config/dynamics_training.yaml
+++ b/config/dynamics_training.yaml
@@ -1,7 +1,7 @@
 # General settings
 log_dir: ./logs/dynamics_model  # Directory to save logs and checkpoints
-train_data_dir: /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
-val_data_dir: /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
+train_data_dir: /scratch/rs9193/dynamics_dataset # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
+val_data_dir: /scratch/rs9193/dynamics_dataset # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
 
 # Training settings
 batch_size: 220                  # Batch size for training and validation
@@ -21,8 +21,8 @@ mode: min                        # Save checkpoints with the minimum value of th
 parking_model:
   # train
   data_dir: '/'
-  log_dir: './log/'
-  checkpoint_dir: './ckpt'
+  log_dir: './log/dynamics_model'
+  checkpoint_dir: './ckpt/dynamics_model'
   log_every_n_steps: 10
   check_val_every_n_epoch: 3
 
@@ -31,8 +31,8 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 1
 
-  training_map: /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
-  validation_map: /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/scratch/rs9193/dynamics_dataset" #"/vast/sy3913/egocentric_speed_dataset/e2e_dataset/"" # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "/scratch/rs9193/dynamics_dataset" # "/vast/sy3913/egocentric_speed_dataset/e2e_dataset/"" # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
