--- a/config/dynamics_training.yaml
+++ b/config/dynamics_training.yaml
@@ -1,16 +1,16 @@
 # General settings
 log_dir: ./logs/dynamics_model  # Directory to save logs and checkpoints
-train_data_dir: /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
+train_data_dir: /scratch/rs9193/dynamics_dataset/  # /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
 # val_data_dir: /vast/rs9193/Town_Opt_1000_small # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
-val_data_dir: /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
+val_data_dir: /scratch/rs9193/dynamics_dataset/  # /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
 
 # Training settings
 batch_size: 220                  # Batch size for training and validation
 num_workers: 20                  # Number of workers for data loading
 learning_rate: 0.001            # Learning rate for the optimizer
 epochs: 100                      # Number of training epochs
-log_every_n_steps: 10           # Log metrics every N steps
-check_val_every_n_epoch: 1      # Run validation every N epochs
+log_every_n_steps: 1           # Log metrics every N steps
+check_val_every_n_epoch: 10      # Run validation every N epochs
 
 # Model checkpoint settings
 checkpoint_dir: ./ckpt/dynamics_model  # Directory to save model checkpoints
@@ -22,19 +22,19 @@ mode: min                        # Save checkpoints with the minimum value of th
 parking_model:
   # train
   data_dir: '/'
-  log_dir: './log/'
-  checkpoint_dir: './ckpt'
+  log_dir: './log/dynamics_model'
+  checkpoint_dir: './ckpt/dynamics_model'
   log_every_n_steps: 10
   check_val_every_n_epoch: 3
 
   epochs: 155
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 200
+  batch_size: 40000
 
-  training_map: /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
+  training_map: /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
   # validation_map: /vast/rs9193/Town_Opt_1000_small # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
-  validation_map: /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
+  validation_map: /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 1
   hist_frame_nums: 0
   token_nums: 204
