--- a/config/training.yaml
+++ b/config/training.yaml
@@ -4,15 +4,15 @@ parking_model:
   log_dir: './log/'
   checkpoint_dir: './ckpt'
   log_every_n_steps: 10
-  check_val_every_n_epoch: 3
+  check_val_every_n_epoch: 5
 
   epochs: 155
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 32
+  batch_size: 20
 
-  training_map: "/vast/rs9193/Town_Opt_1000"
-  validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset "
+  validation_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset "
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -42,8 +42,8 @@ parking_model:
   tf_en_layers: 4
   tf_en_dropout: 0.05
   tf_en_bev_length: 256
-  tf_en_motion_length: 3
-
+  tf_en_motion_length: 4
+  tf_en_target_length: 3
   # transformer decoder
   tf_de_dim: 264
   tf_de_heads: 6
