Update dynamics model

--- a/config/dynamics_training.yaml
+++ b/config/dynamics_training.yaml
@@ -18,6 +18,7 @@ save_top_k: 2                    # Number of best checkpoints to save
 monitor: val_loss                # Metric to monitor for saving checkpoints
 mode: min                        # Save checkpoints with the minimum value of the monitored metric
 
+resume_ckpt_path: null #/scratch/rs9193/park_test/ParkWithUncertainty/ckpt/last.ckpt  # Path to resume training from a checkpoint
 
 parking_model:
   # train
@@ -27,13 +28,13 @@ parking_model:
   log_every_n_steps: 10
   check_val_every_n_epoch: 3
 
-  epochs: 2000
+  epochs: 20000
   learning_rate: 0.0001
   weight_decay: 0.0001
   batch_size: 40000
 # Note: Before training, the val_dataset must contain more than 1 batch of data, 
 # Otherwise, the validation will not be performed, no ckpt will be saved.
-  training_map: /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
+  training_map: /scratch/rs9193/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
   # validation_map: /vast/rs9193/Town_Opt_1000_small # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
   validation_map: /scratch/rs9193/dynamics_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 1
