--- a/config/training.yaml
+++ b/config/training.yaml
@@ -11,8 +11,10 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 20
 
-  training_map: "/scratch/rs9193/Town_Opt_1" #/scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
-  validation_map: "/scratch/rs9193/Town_Opt_1" #/scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
+  # training_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset/" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
+  # validation_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset/" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -42,7 +44,9 @@ parking_model:
   tf_en_layers: 4
   tf_en_dropout: 0.05
   tf_en_bev_length: 256
-  tf_en_motion_length: 3
+  tf_en_motion_length: 4
+  tf_en_target_length: 3
+
 
   # transformer decoder
   tf_de_dim: 264
