--- a/config/dynamics_training.yaml
+++ b/config/dynamics_training.yaml
@@ -1,8 +1,8 @@
 # General settings
 log_dir: ./logs/dynamics_model  # Directory to save logs and checkpoints
-train_data_dir: /scratch/rs9193/dynamics_dataset/  # /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
+train_data_dir: /Town_Opt_200 #/scratch/rs9193/dynamics_dataset/  # /vast/rs9193/Town_Opt_1000 # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
 # val_data_dir: /vast/rs9193/Town_Opt_1000_small # /scratch/rs9193/Town_Opt_1   # Path to the training dataset
-val_data_dir: /scratch/rs9193/dynamics_dataset/  # /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
+val_data_dir: /Town_Opt_200 #/scratch/rs9193/dynamics_dataset/  # /scratch/rs9193/Town_Opt_1000_Val # /scratch/rs9193/Town_Opt_1        # Path to the validation dataset
 
 # Training settings
 batch_size: 220                  # Batch size for training and validation
@@ -34,9 +34,9 @@ parking_model:
   batch_size: 40000
 # Note: Before training, the val_dataset must contain more than 1 batch of data, 
 # Otherwise, the validation will not be performed, no ckpt will be saved.
-  training_map: /scratch/rs9193/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
+  training_map: /Town_Opt_200 #/scratch/rs9193/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
   # validation_map: /vast/rs9193/Town_Opt_1000_small # /scratch/rs9193/Town_Opt_1 # "/vast/rs9193/Town_Opt_1000"
-  validation_map: /scratch/rs9193/dynamics_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
+  validation_map: /Town_Opt_200 #/scratch/rs9193/dynamics_dataset/ # /vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # /scratch/rs9193/Town_Opt_1 # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 1
   hist_frame_nums: 10
   token_nums: 204
