--- a/config/training.yaml
+++ b/config/training.yaml
@@ -2,7 +2,8 @@ parking_model:
   # train
   data_dir: '/'
   log_dir: './log/'
-  checkpoint_dir: './ckpt'
+  checkpoint_dir: '/scratch/yh4007/ParkWithUncertainty-continuous/ckpt/exp_2025_5_29_18_11_1/' #'./ckpt'
+  model_path: '/scratch/yh4007/ParkWithUncertainty-continuous/ckpt/exp_2025_5_29_18_11_1/last.ckpt'
   log_every_n_steps: 10
   check_val_every_n_epoch: 5
 
@@ -11,9 +12,9 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 20
 
-  training_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset "
-  validation_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset "
-  future_frame_nums: 4
+  training_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset"
+  validation_map: "/vast/sy3913/egocentric_speed_dataset/e2e_dataset"
+  future_frame_nums: 8
   hist_frame_nums: 10
   token_nums: 204
   image_crop: 256
@@ -49,4 +50,4 @@ parking_model:
   tf_de_heads: 6
   tf_de_layers: 4
   tf_de_dropout: 0.05
-  tf_de_tgt_dim: 15
+  tf_de_tgt_dim: 27
