--- a/config/training.yaml
+++ b/config/training.yaml
@@ -11,8 +11,10 @@ parking_model:
   weight_decay: 0.0001
   batch_size: 20
 
-  training_map: "/vast/rs9193/Town_Opt_1000"
-  validation_map: "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "/Town_Opt_1000_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
+  # training_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/vast/rs9193/Town_Opt_1000"
+  # validation_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
   hist_frame_nums: 10
   token_nums: 204
@@ -43,6 +45,8 @@ parking_model:
   tf_en_dropout: 0.05
   tf_en_bev_length: 256
   tf_en_motion_length: 3
+  tf_en_target_length: 3
+
 
   # transformer decoder
   tf_de_dim: 264
@@ -50,3 +54,7 @@ parking_model:
   tf_de_layers: 4
   tf_de_dropout: 0.05
   tf_de_tgt_dim: 15
+  
+  # dynamics model ckpt
+  resume_ckpt_path: "./ckpt/exp_2025_5_30_17_22_24/E2EParking-epoch=17-val_loss=1.37.ckpt"
+  hybrid_ckpt_path: "./ckpt/exp_2025_5_30_17_22_24/E2EParking-epoch=17-val_loss=1.37.ckpt"
