--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: E2EParking_Upgrade
+name: E2EParking
 channels:
     - conda-forge
     - pytorch
@@ -8,13 +8,13 @@ dependencies:
     - _libgcc_mutex=0.1=main
     - _openmp_mutex=5.1=1_gnu
     - blas=1.0=mkl
-    - brotlipy
+    - brotlipy=0.7.0=py37h27cfd23_1003
     - bzip2=1.0.8=h7b6447c_0
-    - ca-certificates
-    - certifi
-    - cffi
+    - ca-certificates=2023.08.22=h06a4308_0
+    - certifi=2022.12.7=py37h06a4308_0
+    - cffi=1.15.1=py37h5eee18b_3
     - charset-normalizer=2.0.4=pyhd3eb1b0_0
-    - cryptography
+    - cryptography=39.0.1=py37h9ce1e76_0
     - cuda-cudart=11.7.99=0
     - cuda-cupti=11.7.101=0
     - cuda-libraries=11.7.1=0
@@ -28,7 +28,7 @@ dependencies:
     - gmp=6.2.1=h295c915_3
     - gnutls=3.6.15=he1e5248_0
     - icu=58.2=he6710b0_3
-    - idna
+    - idna=3.4=py37h06a4308_0
     - intel-openmp=2021.4.0=h06a4308_3561
     - jpeg=9e=h5eee18b_1
     - kiwisolver=1.4.4=py37h6a678d5_0
@@ -43,9 +43,9 @@ dependencies:
     - libcusolver=11.4.0.1=0
     - libcusparse=11.7.4.91=0
     - libdeflate=1.17=h5eee18b_0
-    - libffi
-    - libgcc-ng
-    - libgomp
+    - libffi=3.4.4=h6a678d5_0
+    - libgcc-ng=11.2.0=h1234567_1
+    - libgomp=11.2.0=h1234567_1
     - libiconv=1.16=h7f8727e_2
     - libidn2=2.3.4=h5eee18b_0
     - libnpp=11.7.4.75=0
@@ -69,25 +69,32 @@ dependencies:
     - numpy=1.21.5=py37h6c91a56_3
     - numpy-base=1.21.5=py37ha15fc14_3
     - openh264=2.1.1=h4ff587b_0
-    - openssl
+    - openssl=1.1.1w=h7f8727e_0
     - pillow=9.4.0=py37h6a678d5_0
     - pip=22.3.1=py37h06a4308_0
     - pycparser=2.21=pyhd3eb1b0_0
-    - pyopenssl
+    - pyopenssl=23.0.0=py37h06a4308_0
     - pyparsing=3.0.9=py37h06a4308_0
     - pysocks=1.7.1=py37_1
-    - python=3.10.1
-    - readlin
+    - python=3.7.16=h7a1cb2a_0
+    - python-dateutil=2.8.2=pyhd3eb1b0_0
+    - pytorch=1.13.1=py3.7_cuda11.7_cudnn8.5.0_0
+    - pytorch-cuda=11.7=h778d358_5
+    - pytorch-mutex=1.0=cuda
+    - readline=8.2=h5eee18b_0
     - requests=2.28.1=py37h06a4308_0
     - setuptools=65.6.3=py37h06a4308_0
     - six=1.16.0=pyhd3eb1b0_1
-    - sqlite
-    - tk
-    - typing_extensions
+    - sqlite=3.41.2=h5eee18b_0
+    - tk=8.6.12=h1ccaba5_0
+    - torchaudio=0.13.1=py37_cu117
+    - torchvision=0.14.1=py37_cu117
+    - tornado=6.2=py37h5eee18b_0
+    - typing_extensions=4.3.0=py37h06a4308_0
     - urllib3=1.26.14=py37h06a4308_0
     - wheel=0.38.4=py37h06a4308_0
-    - xz
-    - zlib
+    - xz=5.4.2=h5eee18b_0
+    - zlib=1.2.13=h5eee18b_0
     - zstd=1.5.5=hc292b87_0
     - pip:
           - absl-py==2.0.0
@@ -96,6 +103,8 @@ dependencies:
           - async-timeout==4.0.3
           - asynctest==0.13.0
           - attrs==23.1.0
+          - cachetools==5.3.1
+          - efficientnet-pytorch==0.7.1
           - filelock==3.12.2
           - frozenlist==1.3.3
           - fsspec==2023.1.0
@@ -118,6 +127,7 @@ dependencies:
           - pydeprecate==0.3.1
           - pygame==2.5.0
           - pyquaternion==0.9.9
+          - pytorch-lightning==1.5.0
           - pyyaml==6.0.1
           - requests-oauthlib==1.3.1
           - rsa==4.9
