--- a/config/dino_training.yaml
+++ b/config/dino_training.yaml
@@ -1,6 +1,6 @@
 parking_model:
   # train
-  data_dir: '/home/intern2025/research/ParkWithUncertainty'
+  data_dir: '/data_ssd/'
   log_dir: './log/'
   checkpoint_dir: './ckpt'
   log_every_n_steps: 5
@@ -9,7 +9,7 @@ parking_model:
   epochs: 26
   learning_rate: 0.0001
   weight_decay: 0.0001
-  batch_size: 4
+  batch_size: 20
 
   training_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
   validation_map: "e2e_parking/Town_Opt_1000_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
